--- a/DRL_for_Autonomous_Driving.ipynb
+++ b/DRL_for_Autonomous_Driving.ipynb
@@ -133,6 +133,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "85ec3415",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make(\"CarRacing-v0\")\n",
+    "env=DummyVecEnv(env)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cf3eae39-bf39-4ec8-bd10-f776e8ab8a73",
    "metadata": {},
    "outputs": [],
